nerf-pytorch/wandb/run-20240502_014234-77nubz7j/files/output.log

Training STarted!!!!!!!!!!
Loaded blender (138, 400, 400, 4) torch.Size([40, 4, 4]) [400, 400, 555.5555155968841] ./data/nerf_synthetic/lego
Not ndc!
Begin
TRAIN views are [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
 96 97 98 99]
TEST views are [113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
 131 132 133 134 135 136 137]
VAL views are [100 101 102 103 104 105 106 107 108 109 110 111 112]
[Config] Center cropping of size 200 x 200 is enabled until iter 500
/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/torch/functional.py:507: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3549.)
  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]
blender_paper_lego 5 [9.31418] 0.5241132 4
iter time 0.14996
test poses shape torch.Size([25, 4, 4])
0 8.487701416015625e-05
1 10.890132904052734
2 11.034219980239868
3 11.047152996063232
4 10.982605218887329
5 11.0655198097229
6 11.097370386123657
7 11.027560949325562
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent o9wt5myf during agentHeartbeat (<Response [404]>)
Exception in thread Thread-3:
Traceback (most recent call last):
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/lib/retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/internal/internal_api.py", line 369, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/lib/gql_request.py", line 59, in execute
    request.raise_for_status()
  File "/share/apps/anaconda3/2020.07/lib/python3.8/site-packages/requests/models.py", line 941, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/internal/internal_api.py", line 2988, in agent_heartbeat
    response = self.gql(
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/internal/internal_api.py", line 341, in gql
    ret = self._retry_gql(
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/lib/retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/util.py", line 908, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access vb2386/nerf_sweep/77nubz7j
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/share/apps/anaconda3/2020.07/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/share/apps/anaconda3/2020.07/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/agents/pyagent.py", line 167, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/apis/internal.py", line 153, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/wandb/sdk/internal/internal_api.py", line 2999, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "/share/apps/anaconda3/2020.07/lib/python3.8/ast.py", line 59, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/share/apps/anaconda3/2020.07/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access vb2386/nerf_sweep/77nubz7j
               ^
SyntaxError: invalid syntax
8 11.096771478652954
[34m[1mwandb[39m[22m: Ctrl + C detected. Stopping sweep.
Traceback (most recent call last):
  File "profile_nerf.py", line 552, in run
    train(args)
  File "profile_nerf.py", line 846, in train
    render_path(torch.Tensor(poses[i_test]).to(device), hwf, K, args.chunk, render_kwargs_test, gt_imgs=images[i_test], savedir=testsavedir)
  File "profile_nerf.py", line 155, in render_path
    rgb, disp, acc, _ = render(H, W, K, chunk=chunk, c2w=c2w[:3,:4], **render_kwargs)
  File "profile_nerf.py", line 127, in render
    all_ret = batchify_rays(rays, chunk, **kwargs)
  File "profile_nerf.py", line 60, in batchify_rays
    ret = render_rays(rays_flat[i:i+chunk], **kwargs)
  File "profile_nerf.py", line 402, in render_rays
    raw = network_query_fn(pts, viewdirs, run_fn)
  File "profile_nerf.py", line 202, in <lambda>
    network_query_fn = lambda inputs, viewdirs, network_fn : run_network(inputs, viewdirs, network_fn,
  File "profile_nerf.py", line 50, in run_network
    outputs_flat = batchify(fn, netchunk)(embedded)
  File "profile_nerf.py", line 34, in ret
    return torch.cat([fn(inputs[i:i+chunk]) for i in range(0, inputs.shape[0], chunk)], 0)
  File "profile_nerf.py", line 34, in <listcomp>
    return torch.cat([fn(inputs[i:i+chunk]) for i in range(0, inputs.shape[0], chunk)], 0)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/torch/nn/modules/module.py", line 1511, in _wrapped_call_impl
    return self._call_impl(*args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/torch/nn/modules/module.py", line 1520, in _call_impl
    return forward_call(*args, **kwargs)
  File "/scratch/vb2386/Documents/nerf-pytorch/run_nerf_helpers.py", line 101, in forward
    h = F.relu(h)
  File "/scratch/vb2386/Documents/nerf-pytorch/venv/lib/python3.8/site-packages/torch/nn/functional.py", line 1473, in relu
    result = torch.relu(input)
Exception